assets/css/trp-editor-style.css
body{
    margin: 0px;
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

#trp-editor{
    margin-left: 300px;
    position: fixed;
    width: 100%;
    height: 100%;
}

#trp-controls{
    width: 298px;
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0;
    border-right: 2px solid #ddd;
    background: #eee;
}

.trp-controls-container{
    height: 100%;
    overflow-x: auto;
}


#trp-save-container{
    float: right;
}

.trp-controls-section{
    background: #fff;
    color: #555d66;
    cursor: default;
    border: none;
    border-bottom: 1px solid #ddd;
    border-top: 1px solid #ddd;
    margin-bottom: 15px;
}

.trp-controls-section-content{
    padding: 12px;
}

.ui-resizable-handle {
    position: absolute;
    font-size: 1px;
    display: block;
    z-index: 50;
}

.ui-resizable-handle:active {
    background-color: #676767;
}

.ui-resizable-disabled .ui-resizable-handle,
.ui-resizable-autohide .ui-resizable-handle {
    display: none;
}
.ui-resizable-e {
    cursor: e-resize;
    width: 7px;
    right: -2px;
    top: 0;
    height: 100%;
}

#trp-controls-close{
    cursor: pointer;
    font: 400 26px/42px dashicons;
    font-weight: bold;
    content: "\f335";
    display: inline-block;
    width: 45px;
    height: 41px;
    background: #eee;
    border: none;
    border-top: 4px solid #eee;
    border-right: 1px solid #ddd;
    color: #444;
    text-align: center;
    -webkit-transition: color .15s ease-in-out,border-color .15s ease-in-out,background .15s ease-in-out;
    transition: color .15s ease-in-out,border-color .15s ease-in-out,background .15s ease-in-out;
    -webkit-box-sizing: content-box;
    -moz-box-sizing: content-box;
    box-sizing: content-box;
    text-decoration: none;
}

#trp-controls-close:focus,
#trp-controls-close:hover{
    background: #fff;
    color: #0073aa;
    border-top-color: #0073aa;
    outline: none;
    -webkit-box-shadow: none;
    box-shadow: none;
}

#trp-preview{
    position: absolute;
    left: 0;
    right: 300px;
    height: 100%;
}

iframe#trp-preview-iframe {
    position: absolute;
    height: 100%;
    width: 100%;
    border-width: 0px;
}

#trp-language-switch-form{
    display: inline;
}

#trp-language-select{
    width: 100%;
    margin-bottom: 30px;
    font-size: 14px;
    padding: 3px;
}
#trp-language-select {

}

.string-selector-description{
    font-size: 12px;
}




/*
    String list
 */

#trp-string-categories{
    width: 100% /*!important*/;
    margin-bottom: 10px;
    font-size: 14px;
    padding: 3px;
}

span.select2-container{
    margin-bottom: 10px;
    /*width: 100% !important;*/
}

#trp-lists{
    margin-botton: 10px;
}


/*
 Translation Editors
 */

#trp-previous{
    float: left;
}
#trp-next{
    float: right;
}
.trp-toggle-languages {
    margin-top: 10px;
    margin-bottom: 10px;
}

.trp-toggle-languages, .trp-next-previous-buttons{
    color: darkblue;
    cursor: pointer;
}

.trp-toggle-languages:hover,
.trp-next-previous-buttons:hover{
    color: #0073aa;
}

.trp-language-name{
    padding-bottom: 10px;
    color: black;
}

.trp-language-text{
    padding-right: 9px;
    padding-bottom: 12px;
}

.trp-language-text textarea{
    height: 65px;
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
    font-size: 14px;
    max-width: 100%;
    min-width: 100%;
    width: 100%;
}

.trp-discard-changes{
    color: darkgrey;
    font-size: 11px;
    float: right;
    user-select: none;
}

.trp-unsaved-changes .trp-discard-changes{
    color: #a00;
    cursor: pointer;
    text-decoration: underline;
}
.trp-unsaved-changes .trp-discard-changes:hover{
    color: #dc3232;
    cursor: pointer;
}


.trp-default-language{
    margin-top: 50px;
}

.trp-toggle-languages span, .trp-next-previous-buttons{
    user-select: none;
}

#trp-hide-all-languages, .trp-other-language{
    display: none;
}

#trp-save{
    margin-right: 10px;
    margin-top: 9px;
    margin-left: 10px;
    background: #0085ba;
    border-color: #0073aa #006799 #006799;
    -webkit-box-shadow: 0 1px 0 #006799;
    box-shadow: 0 1px 0 #006799;
    color: #fff;
    text-decoration: none;
    text-shadow: 0 -1px 1px #006799, 1px 0 1px #006799, 0 1px 1px #006799, -1px 0 1px #006799;
    display: inline-block;
    font-size: 13px;
    line-height: 26px;
    height: 28px;
    padding: 0 10px 1px;
    cursor: pointer;
    border-width: 1px;
    border-style: solid;
    -webkit-appearance: none;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    white-space: nowrap;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    font-family: inherit;
}

#trp-save:hover {
    background: #008ec2;
    border-color: #006799;
    color: #fff;
}

#trp-save:active {
    background: #0073aa;
    border-color: #006799;
    -webkit-box-shadow: inset 0 2px 0 #006799;
    box-shadow: inset 0 2px 0 #006799;
}


#trp-translation-saved {
    padding-left: 20px;
    color: #008000;
    font-size: 14px;
    display:none;
}

/*
 * Loading animation
 */
.trp-ajax-loader {
    margin-bottom: -6px;
    margin-left:20px;
    display: inline-block;
    z-index: 50;
    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(GradientType=1, StartColorStr='#E57EB149', EndColorStr='#E57EB149')";
    filter: progid:DXImageTransform.Microsoft.Gradient(GradientType=1, StartColorStr='#E57EB149', EndColorStr='#E57EB149');
    zoom: 1!important;
}

.trp-ajax-loader .trp-spinner {
    width: 15px;
    height: 15px;
    border: 3px solid #a1b9e6;
    border-radius: 50%;
    border-left-color: transparent;
    border-right-color: transparent;
    -webkit-animation: spin 1s linear infinite;
    animation: spin 1s linear infinite;

}

@-webkit-keyframes
spin {
    100% {
        -webkit-transform: rotate(360deg);
        transform: rotate(360deg)
    }
}

@keyframes
spin {
    100% {
        -moz-transform: rotate(360deg);
        -ms-transform: rotate(360deg);
        -o-transform: rotate(360deg);
        transform: rotate(360deg)
    }
}

